--- a/nicepage.css
+++ b/nicepage.css
@@ -42100,16 +42100,17 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 172px;
+  min-height: 237px;
 }
 
 .u-header .u-menu-1 {
-  margin: 45px 0 0 auto;
+  margin: 120px 0 0 auto;
 }
 
 .u-header .u-nav-1 {
   font-weight: 400;
   font-size: 1rem;
+  letter-spacing: normal;
 }
 
 .u-header .u-nav-2 {
@@ -42133,38 +42134,46 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-image-1 {
-  width: 131px;
-  height: 131px;
-  margin: -64px auto 0 11px;
+  width: 144px;
+  height: 144px;
+  margin: -92px auto 0 -9px;
 }
 
 .u-header .u-image-2 {
-  width: 180px;
-  height: 78px;
-  margin: -104px auto 47px 163px;
+  width: 289px;
+  height: 125px;
+  margin: -135px auto 34px 135px;
 }
 @media (max-width: 1199px) {
   .u-header .u-menu-1 {
     width: auto;
   }
 
-  .u-header .u-nav-1 {
-    letter-spacing: normal;
-  }
-
   .u-header .u-image-1 {
-    margin-top: -64px;
+    width: 144px;
+    margin-top: -92px;
   }
 
   .u-header .u-image-2 {
-    margin-top: -104px;
+    width: 289px;
+    height: 125px;
+    margin-top: -135px;
+    margin-left: 135px;
   }
 }
 
-
+@media (max-width: 767px) {
+  .u-header .u-sheet-1 {
+    min-height: 561px;
+  }
+}
 @media (max-width: 575px) {
+  .u-header .u-sheet-1 {
+    min-height: 451px;
+  }
+
   .u-header .u-image-2 {
-    margin-left: 160px;
+    margin-left: 51px;
   }
 }
  .u-footer {
@@ -42172,160 +42181,276 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-sheet-1 {
-  min-height: 224px;
-}
-
-.u-footer .u-image-1 {
-  width: 83px;
-  height: 80px;
-  margin: 25px auto 0 330px;
+  min-height: 284px;
 }
 
 .u-footer .u-text-1 {
   font-size: 1.25rem;
-  margin: -80px auto 0 0;
+  margin: 17px auto 0 0;
 }
 
-.u-footer .u-image-2 {
-  width: 28px;
-  height: 28px;
-  margin: 10px auto 0 0;
+.u-footer .u-text-2 {
+  font-size: 1.25rem;
+  margin: -32px 78px 0 auto;
 }
 
 .u-footer .u-btn-1 {
   background-image: none;
-  border-style: solid;
-  font-size: 0.875rem;
-  margin: -24px auto 0 33px;
+  font-size: 1.25rem;
   padding: 0;
 }
 
-.u-footer .u-image-3 {
-  width: 28px;
-  height: 28px;
-  margin: 7px auto 0 0;
+.u-footer .u-icon-1 {
+  width: 29px;
+  height: 29px;
+  color: rgb(44, 44, 44) !important;
+  margin: 16px auto 0 0;
+  padding: 0;
+}
+
+.u-footer .u-text-3 {
+  text-decoration: underline !important;
+  margin: -26px auto 0 35px;
 }
 
 .u-footer .u-btn-2 {
   background-image: none;
-  border-style: solid;
   font-size: 0.875rem;
-  margin: -25px auto 0 33px;
   padding: 0;
 }
 
+.u-footer .u-image-1 {
+  width: 48px;
+  height: 48px;
+  margin: -13px auto 0 430px;
+}
+
+.u-footer .u-image-2 {
+  width: 46px;
+  height: 46px;
+  margin: -47px auto 0;
+}
+
+.u-footer .u-image-3 {
+  width: 292px;
+  height: 48px;
+  margin: -45px 278px 0 auto;
+}
+
 .u-footer .u-image-4 {
-  width: 79px;
-  height: 79px;
-  margin: -104px auto 0 450px;
+  width: 48px;
+  height: 45px;
+  margin: -48px auto 0 327px;
 }
 
-.u-footer .u-image-5 {
-  width: 89px;
-  height: 89px;
-  margin: -83px 490px 0 auto;
+.u-footer .u-icon-2 {
+  width: 30px;
+  height: 30px;
+  color: rgb(44, 44, 44) !important;
+  margin: -20px auto 0 0;
+  padding: 0;
 }
 
-.u-footer .u-image-6 {
-  width: 293px;
-  height: 100px;
-  margin: -95px 197px 0 auto;
+.u-footer .u-text-4 {
+  text-decoration: underline !important;
+  margin: -29px auto 0 35px;
 }
 
 .u-footer .u-btn-3 {
   background-image: none;
-  border-style: solid;
   font-size: 0.875rem;
-  margin: 25px auto 0 33px;
   padding: 0;
 }
 
+.u-footer .u-icon-3 {
+  width: 29px;
+  height: 29px;
+  color: rgb(44, 44, 44) !important;
+  margin: -72px 165px 0 auto;
+  padding: 0;
+}
+
+.u-footer .u-btn-4 {
+  background-image: none;
+  font-size: 0.875rem;
+  text-decoration: underline !important;
+  margin: -25px 0 0 auto;
+  padding: 0;
+}
+
+.u-footer .u-btn-5 {
+  background-image: none;
+  font-size: 0.875rem;
+  text-decoration: underline !important;
+  margin: 21px 67px 0 auto;
+  padding: 0;
+}
+
+.u-footer .u-icon-4 {
+  width: 30px;
+  height: 30px;
+  color: rgb(44, 44, 44) !important;
+  margin: -26px 164px 0 auto;
+  padding: 0;
+}
+
+.u-footer .u-image-5 {
+  width: 227px;
+  height: 48px;
+  margin: 3px auto 0 366px;
+}
+
+.u-footer .u-image-6 {
+  width: 241px;
+  height: 32px;
+  margin: -40px 402px 0 auto;
+}
+
 .u-footer .u-image-7 {
-  width: 69px;
-  height: 74px;
-  margin: -49px auto 0 300px;
+  width: 48px;
+  height: 51px;
+  margin: -43px auto 0 327px;
 }
 
 .u-footer .u-image-8 {
-  width: 227px;
-  height: 79px;
-  margin: -76px auto 0 375px;
+  width: 40px;
+  height: 40px;
+  margin: -45px 375px 0 auto;
 }
 
-.u-footer .u-image-9 {
-  width: 242px;
-  height: 57px;
-  margin: -69px 286px 0 auto;
+.u-footer .u-icon-5 {
+  width: 30px;
+  height: 30px;
+  color: rgb(44, 44, 44) !important;
+  margin: -36px auto 0 0;
+  padding: 0;
 }
 
-.u-footer .u-image-10 {
-  width: 73px;
-  height: 73px;
-  margin: -67px 176px 39px auto;
+.u-footer .u-text-5 {
+  text-decoration: underline !important;
+  margin: -26px auto 0 35px;
+}
+
+.u-footer .u-btn-6 {
+  background-image: none;
+  font-size: 0.875rem;
+  padding: 0;
+}
+
+.u-footer .u-btn-7 {
+  background-image: none;
+  font-size: 0.875rem;
+  text-decoration: underline !important;
+  margin: -25px 65px 0 auto;
+  padding: 0;
+}
+
+.u-footer .u-icon-6 {
+  width: 30px;
+  height: 30px;
+  color: rgb(44, 44, 44) !important;
+  margin: -29px 164px 0 auto;
+  padding: 0;
+}
+
+.u-footer .u-icon-7 {
+  width: 30px;
+  height: 30px;
+  margin: 14px auto 0 0;
+  padding: 0;
+}
+
+.u-footer .u-text-6 {
+  font-size: 0.875rem;
+  margin: -23px auto 60px 35px;
+}
+
+.u-footer .u-btn-8 {
+  background-image: none;
+  font-size: 0.875rem;
+  padding: 0;
 }
 @media (max-width: 1199px) {
-  .u-footer .u-text-1 {
-    margin-top: -80px;
+  .u-footer .u-text-2 {
+    margin-top: -3px;
   }
 
-  .u-footer .u-btn-1 {
-    margin-top: -24px;
-    margin-left: 0;
+  .u-footer .u-icon-1 {
+    margin-top: -11px;
   }
 
-  .u-footer .u-btn-2 {
-    margin-left: 0;
+  .u-footer .u-text-3 {
+    margin-top: -8px;
+  }
+
+  .u-footer .u-image-1 {
+    margin-top: -31px;
+  }
+
+  .u-footer .u-image-2 {
+    margin-top: -48px;
+  }
+
+  .u-footer .u-image-3 {
+    margin-top: -45px;
   }
 
   .u-footer .u-image-4 {
-    width: 79px;
-    margin-left: 450px;
+    margin-top: -47px;
+  }
+
+  .u-footer .u-icon-2 {
+    margin-top: -55px;
+  }
+
+  .u-footer .u-text-4 {
+    margin-top: -11px;
+  }
+
+  .u-footer .u-icon-3 {
+    margin-top: -64px;
+  }
+
+  .u-footer .u-btn-4 {
+    margin-top: 20px;
+  }
+
+  .u-footer .u-btn-5 {
+    margin-top: -25px;
+    margin-right: 0;
+  }
+
+  .u-footer .u-icon-4 {
+    margin-top: -26px;
   }
 
   .u-footer .u-image-5 {
-    width: 89px;
-    height: 89px;
-    margin-top: -83px;
-    margin-right: 490px;
-  }
-
-  .u-footer .u-image-6 {
-    width: 293px;
-    height: 100px;
-    margin-top: -95px;
-    margin-right: 197px;
-  }
-
-  .u-footer .u-btn-3 {
-    margin-left: 0;
-  }
-
-  .u-footer .u-image-7 {
-    width: 69px;
-    height: 74px;
-    margin-top: -49px;
-    margin-left: 300px;
+    margin-top: -4px;
   }
 
   .u-footer .u-image-8 {
-    width: 227px;
-    height: 79px;
-    margin-top: -75px;
-    margin-left: 375px;
+    margin-top: -45px;
+    margin-right: 375px;
   }
 
-  .u-footer .u-image-9 {
-    width: 242px;
-    height: 57px;
-    margin-top: -69px;
-    margin-right: 286px;
+  .u-footer .u-icon-5 {
+    margin-top: -30px;
   }
 
-  .u-footer .u-image-10 {
-    width: 73px;
-    height: 73px;
-    margin-top: -67px;
-    margin-right: 176px;
+  .u-footer .u-text-5 {
+    margin-top: -26px;
+  }
+
+  .u-footer .u-btn-7 {
+    margin-right: 0;
+  }
+
+  .u-footer .u-icon-6 {
+    margin-top: -29px;
+  }
+
+  .u-footer .u-text-6 {
+    margin-top: -23px;
   }
 }
 
@@ -42334,41 +42459,103 @@ a.u-link.u-text-hover-grey-90:hover {
     font-size: 1rem;
   }
 
-  .u-footer .u-image-5 {
-    margin-right: 451px;
+  .u-footer .u-text-2 {
+    font-size: 1rem;
+    margin-top: -17px;
   }
 
-  .u-footer .u-image-8 {
+  .u-footer .u-icon-1 {
+    margin-top: 9px;
+  }
+
+  .u-footer .u-image-1 {
+    margin-top: -28px;
+  }
+
+  .u-footer .u-image-3 {
+    margin-right: 248px;
+  }
+
+  .u-footer .u-icon-2 {
+    margin-top: -62px;
+  }
+
+  .u-footer .u-icon-3 {
+    margin-top: -88px;
+  }
+
+  .u-footer .u-btn-4 {
+    margin-top: 34px;
+  }
+
+  .u-footer .u-btn-5 {
+    margin-top: -39px;
+  }
+
+  .u-footer .u-image-5 {
+    margin-top: -6px;
     margin-left: 313px;
+  }
+
+  .u-footer .u-image-6 {
+    margin-right: 299px;
+  }
+
+  .u-footer .u-icon-5 {
+    margin-top: -25px;
+  }
+
+  .u-footer .u-text-5 {
+    margin-top: -31px;
+  }
+
+  .u-footer .u-btn-7 {
+    margin-top: -20px;
   }
 }
 @media (max-width: 575px) {
   .u-footer .u-image-1 {
-    margin-left: 257px;
+    margin-left: 292px;
+  }
+
+  .u-footer .u-image-3 {
+    margin-right: 48px;
   }
 
   .u-footer .u-image-4 {
-    margin-left: 261px;
+    margin-left: 292px;
+  }
+
+  .u-footer .u-icon-3 {
+    margin-right: 104px;
+  }
+
+  .u-footer .u-icon-4 {
+    margin-right: 103px;
   }
 
   .u-footer .u-image-5 {
-    margin-right: 251px;
-  }
-
-  .u-footer .u-image-6 {
-    margin-right: 47px;
-  }
-
-  .u-footer .u-image-7 {
-    margin-left: 271px;
-  }
-
-  .u-footer .u-image-8 {
     margin-left: 113px;
   }
 
-  .u-footer .u-image-9 {
-    margin-right: 98px;
+  .u-footer .u-image-6 {
+    margin-right: 99px;
+  }
+
+  .u-footer .u-image-7 {
+    margin-left: 292px;
+  }
+
+  .u-footer .u-image-8 {
+    margin-right: 300px;
+  }
+
+  .u-footer .u-btn-7 {
+    margin-top: -20px;
+  }
+
+  .u-footer .u-icon-6 {
+    margin-right: 103px;
   }
 }
 
