--- a/Task2-T1-T2-mapping.css
+++ b/Task2-T1-T2-mapping.css
@@ -1,41 +1,41 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 532px;
+  min-height: 617px;
+}
+
+.u-section-1 .u-text-1 {
+  margin: 40px auto 0 0;
 }
 
 .u-section-1 .u-image-1 {
   height: 494px;
-  margin-top: 14px;
-  margin-bottom: 24px;
+  margin-top: 0;
+  margin-bottom: 40px;
 }.u-section-2 .u-sheet-1 {
-  min-height: 435px;
+  min-height: 327px;
 }
 
 .u-section-2 .u-text-1 {
-  margin: 0 auto 0 0;
+  margin: 14px auto 0 0;
 }
 
 .u-section-2 .u-text-2 {
-  margin: 50px auto 0 0;
-}
-
-.u-section-2 .u-text-3 {
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.8;
-  margin: 20px 0 35px;
+  margin: 0 0 40px;
 }.u-section-3 .u-sheet-1 {
-  min-height: 778px;
+  min-height: 745px;
 }
 
 .u-section-3 .u-text-1 {
-  margin: -26px auto 0 0;
+  margin: -11px auto 0 0;
 }
 
 .u-section-3 .u-text-2 {
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.8;
-  margin: 21px 0 0;
+  margin: 0;
 }
 
 .u-section-3 .u-image-1 {
@@ -73,13 +73,13 @@
 }
 
 .u-section-4 .u-text-1 {
-  margin: 20px auto 0 0;
+  margin: 41px auto 0 0;
 }
 
 .u-section-4 .u-text-2 {
   font-size: 1rem;
   line-height: 3;
-  margin: 20px 50px 36px 0;
+  margin: 0 50px 35px 0;
 }
 
 @media (max-width: 1199px) {
@@ -92,25 +92,24 @@
 }
 
 .u-section-5 .u-text-1 {
-  margin-bottom: 0;
-  margin-top: 20px;
+  margin: 40px auto 0 0;
 }
 
 .u-section-5 .u-text-2 {
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.8;
-  margin: 20px 20px 0 0;
+  margin: 0 20px 0 0;
 }
 
 .u-section-5 .u-text-3 {
-  margin: 51px auto 0 0;
+  margin: 72px auto 0 0;
 }
 
 .u-section-5 .u-text-4 {
   font-size: 1rem;
   line-height: 1.8;
-  margin: 21px 0 37px;
+  margin: 0 0 37px;
 }
 
 .u-section-5 .u-btn-1 {
